# chemtrace

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.memory/: decisions.md  lessons.md  session_log.md
.skills/: CODE_VERIFIER.md  PROMPT_CONTRACT.md
.specs/: ARCHITECTURE.md  REQUIREMENTS.md
.specs/phases/01-pipeline-core/: CONTEXT.md  PLAN-01.md  VERIFY.md
.specs/phases/02-rag-client/: CONTEXT.md  PLAN-02.md  VERIFY.md
.specs/phases/03-docker-deploy/: CONTEXT.md  PLAN-03.md  VERIFY.md
.specs/phases/04-validate-signal/: 10_NRW_Chemical_SMEs_ChemTrace_Outreach.md  CONTEXT.md  LINKEDIN_PERSONALIZED_DMs_ChemTrace.md  OUTREACH_CONSOLIDADO_ChemTrace_NRW.md  PLAN-04.md  PLAN-05.md  PROMPT_S2_Docker_Optimization_AUDITED.md  PROMPT_S3_Compute_Analytics_AUDITED.md  RESEARCH_SAP_CSV_Format_ChemTrace.md
.specs/phases/05-vsme-export/: CONTEXT.md  GATE.md  PLAN-06.md  PROMPT_TASK_A.md  (+1 more)
data/emission_factors/: factors.json
data/sample_sap/: energy_export_bom.csv  energy_export_essen_2024.csv  energy_export_headerless.csv
data/vsme_templates/: VSME-Digital-Template-1_2_0.xlsx
scripts/: entrypoint.sh  generate_pdfs.py  generate_sample_sap.py
src/chemtrace/: __init__.py  __main__.py  cli.py  config.py  etl.py  parser_patterns.py  pdf_parser.py  prompts.py  rag_client.py  sap_parser.py  utils.py  vector_store.py  vsme_export.py
tests/: test_cli.py  test_etl.py  test_parser.py  test_rag.py  test_sap_parser.py  test_vector_store.py  test_vsme_export.py
